# qtCannelloniCanBus

./: CMakeLists.txt  CannelloniCanBackend.cpp  CannelloniCanBackend.h  QtCannelloniCanBusPlugin.cpp
linux_porting/arpa/: inet.h
linux_porting/linux/: can.h.noload  socket.h  types.h
